welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:15: error: ';' expected but 'else' found.
	droite();avance();gauche();else();
                                   ^